# RSS2Notion

./: .gitignore  README.md  README_EN.md  README_ZH.md  pyproject.toml
.github/workflows/: sync.yml
doc/: feedparser_demo.json
rss2notion/: __init__.py  __main__.py  config.py  converter.py  models.py  rss.py  sync.py
rss2notion/notion/: __init__.py  cleanup.py  client.py  subscription.py
